2016-08-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.15 released.

2016-08-22  c.hetherington  <cth@carlh.net>

	* Fix doubled-up subtitles in some cases when importing
	DCPs with subtitles.

	* Fix colour tint in subtitles burnt into existing DCP
	content.

2016-08-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.14 released.

2016-08-21  Carl Hetherington  <cth@carlh.net>

	* Fix problems when sending emails on some servers.

2016-08-20  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-08-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.13 released.

2016-08-18  Carl Hetherington  <cth@carlh.net>

	* Updated zh_CN translation from 刘汉源.

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-08-17  c.hetherington  <cth@carlh.net>

	* Spot and "fix" impossible refer-to-DCP settings (#929).

	* Label tweak to clarify how JPEG2000 bandwidth control works (#904).

	* Scroll audio mapping view labels correctly (#919).

2016-08-16  c.hetherington  <cth@carlh.net>

	* Basic support for fading subtitles in and out (#923).

	* Fix error on seeking through imported mulit-reel DCPs.

	* Simple information on mouse position in the video waveform (part of #932).

2016-08-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.12 released.

2016-08-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.11 released.

2016-08-14  Carl Hetherington  <cth@carlh.net>

	* Support subtitles in imported DCPs.

	* Updated zh_CN translation from 刘汉源.

2016-08-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.10 released.

2016-08-09  Carl Hetherington  <cth@carlh.net>

	* Improve rendering of outlined burnt-in subtitles a bit.

2016-08-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.9 released.

2016-08-04  Carl Hetherington  <cth@carlh.net>

	* Add button to export entire DCP decryption chain.

2016-07-31  Carl Hetherington  <cth@carlh.net>

	* Allow configuration of MXF/XML filenames (part of #710).
