@@ -1,3 +1,7 @@
+2016-08-24  Carl Hetherington  <cth@carlh.net>
+
+	* Keep timeline above main window.
+
 2016-08-22  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.9.15 released.
